As of 4/29/2022 using zsh